--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,7 +1,7 @@
 html, body {
 	width: 100%;
 	height: 100%;
-	background-color: #777;
+	background-color: #222;
 }
 
 .content {
@@ -25,6 +25,60 @@ html, body {
 	height: 100%;
 	overflow: hidden;
 	background-color: #ddd;
+
+	perspective: 1800px;
+
+	@at-root {
+		.img-figure {
+			position: absolute;
+			width: 320px;
+			height: 360px;
+			margin: 0;
+			padding: 40px;
+			box-sizing: border-box;
+			background-color: #fff;
+			cursor: pointer;
+
+			transform-style: preserve-3d;
+			transform-origin: 0 50% 0;
+			transition: transform .6s ease-in-out, left .6s ease-in-out, top .6s ease-in-out;
+
+			&.is-inverse {
+				transform: translateX(320px) rotateY(180deg);
+			}
+		}
+
+		figcaption {
+			text-align: center;
+			.img-title {
+				margin: 20px 0 0 0;
+				color: #a7a0a2;
+				font-size: 16px;
+			}
+			.img-back {
+				position: absolute;
+				top: 0;
+				left: 0;
+				width: 100%;
+				height: 100%;
+				padding: 50px 40px;
+				overflow: auto;
+				color: #a7a0a2;
+				font-size: 22px;
+				line-height: 1.25;
+				text-align: left;
+				background-color: #fff;
+				box-sizing: border-box;
+				transform: rotateY(180deg) translateZ(1px);
+				backface-visibility: hidden;
+
+				p {
+					margin: 0;
+				}
+			}
+		}
+
+	}
 }
 /*image end*/
 
@@ -32,10 +86,46 @@ html, body {
 .controller-nav {
 	position: absolute;
 	left: 0;
-	bottom: 30px;
+	bottom: 80px;
 	z-index: 101;
 	width: 100%;
 	text-align: center; 	
+
+	@at-root {
+		.controller-unit {
+			display: inline-block;
+			margin: 0 5px;
+			width: 30px;
+			height: 30px;
+			text-align: center;
+			vertical-align: middle;
+			cursor: pointer;
+			background-color: #aaa;
+			border-radius: 50%;
+			transform: scale(0.5);
+			transition: transform .6s ease-in-out, background-color .3s;
+
+			&.is-center {
+				background-color: #999;
+				transform: scale(.8);
+
+				&::after {
+					color: #ffffff;
+					line-height: 30px;
+
+					-webkit-font-smoothing: antialiased;
+					-moz-osx-font-smoothing: grayscale;
+				}
+
+				&.is-inverse {
+					background-color: #999;
+
+					transform: rotateY(180deg);
+				}
+			}
+
+		}
+	}
 }
 /*controller end*/
 
