--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -95,27 +95,22 @@ html, body {
 		.controller-unit {
 			display: inline-block;
 			margin: 0 5px;
-			width: 30px;
-			height: 30px;
+			padding-top: 4px;
+			width: 25px;
+			height: 25px;
 			text-align: center;
 			vertical-align: middle;
+			color: #fff; 
 			cursor: pointer;
 			background-color: #aaa;
 			border-radius: 50%;
-			transform: scale(0.5);
+			box-sizing: border-box;
+			transform: scale(0.7);
 			transition: transform .6s ease-in-out, background-color .3s;
 
 			&.is-center {
 				background-color: #999;
-				transform: scale(.8);
-
-				&::after {
-					color: #ffffff;
-					line-height: 30px;
-
-					-webkit-font-smoothing: antialiased;
-					-moz-osx-font-smoothing: grayscale;
-				}
+				transform: scale(1);
 
 				&.is-inverse {
 					background-color: #999;
